kubernetes/gcp/db-gcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
  namespace: todo-app
spec:
  replicas: 1 # Solo 1 réplica para base de datos (stateful)
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: db
          image: smenaq/todo-db:2.0
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-storage
              subPath: postgres # Evita problemas con lost+found
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: todo-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  namespace: todo-app
spec:
  type: ClusterIP # Solo acceso interno
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: todo-db
